Fixed navbar issues on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -38,10 +38,10 @@ header {
 
 #logo {
   transform: scale(0);
-  font-size: 45px;
+  font-size: 3.5rem;
+  font-weight: bolder;
   color: rgb(211, 187, 157);
   text-decoration: none;
-  font-weight: 900;
   animation: logo-load 2s cubic-bezier(0.71, 0.09, 1, 1) 0.5s forwards;
 }
 
@@ -82,7 +82,7 @@ header {
   font-size: 25px;
   color: rgb(211, 187, 157);
   text-decoration: none;
-  font-weight: 600;
+  font-weight: bolder;
   transition: all 0.3s ease-in-out;
 }
 
@@ -186,11 +186,10 @@ header {
 }
 
 .home-picture {
-  left: 70%;
   background: radial-gradient(#3037523f, #30375227, #30375298, #303752, #303752),
     url(../images/home_image.png) no-repeat;
   width: 20%;
-  height: 80vh;
+  height: 60vh;
   background-position: center;
   background-size: contain;
 }
@@ -212,9 +211,22 @@ header {
 
   .home-picture {
     width: 60%;
+    margin-left: 5%;
   }
 
   .button-container a {
     width: 100px;
+  }
+
+  #logo {
+    font-size: 20px;
+  }
+
+  .navbar li {
+    margin-left: 10px;
+  }
+
+  .navbar li a {
+    font-size: 10px;
   }
 }
